@@ -262,6 +262,9 @@ function src2 = cat_vol_sanlm_filter(job,V,i,src)
     else
       src = single(src);
     end
+
+    % get zero areas before filtering to consider skull-stripped data
+    ind_zero = src == 0;
         
     for im=1:1+job.miter  
       % prevent NaN and INF
@@ -479,7 +482,6 @@ function src2 = cat_vol_sanlm_filter(job,V,i,src)
         end
 
         
-        
         %% add noise
         if job.addnoise
           % Small adaptation for inhomogeneity to avoid too much noise in
@@ -490,16 +492,16 @@ function src2 = cat_vol_sanlm_filter(job,V,i,src)
           % avoid adding of noise in skull-stripped data. This may lead to
           % problems with the skull-stripping detection in cat_run_job!
           % Also important in case of ADNI.
-          sth = max( 0 , min(1 , cat_vol_smooth3X( ...
+          src2 = src2 + max( 0 , min(1 , cat_vol_smooth3X( ...
                  ( job.addnoise.*sth/100 ) - abs(srco - src) , 4/mean(vx_vol) ) ./ ( job.addnoise.*sth/100 ) )) .* ...
                  ( src~=0 ) .* ... save skull-stripping / defacing regions
                  (randn(size(src)) * job.addnoise.*sth/100);
-          ind = src2 ~= 0;
-          src2(ind) = src2(ind) + sth(ind);  
           if ~debug, clear sth; end
         end
         if numel(NCstr)==1 && ~debug, clear src srco; end
         
+        % rescue zero-values (i.e. for skull-stripped data)
+        src2(ind_zero) = 0;  
         
         
         %% restore NAN and INF
